# hrms

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: authentication.py  jwt_utils.py  models.py  permissions.py  redis_client.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_permissions_roles_remove_customuser_phone_and_more.py
attendance/: models.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
employee/: admin.py  models.py  serializers.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_remove_employee_location_delete_locations.py  0003_locations_alter_employee_department_and_more.py  0004_alter_employee_employee_code_and_more.py  0005_alter_employee_location_delete_locations.py
expense/: models.py
leave/: models.py  serializers.py  views.py
payroll/: models.py
travel/: models.py
